@@ -1,3 +1,8 @@
+2008-01-15  Matthieu Nottale  <nottale@gostai.com>
+
+	Factor code.
+	* src/uobject.cc: Factor split_name.
+
 2008-01-15  Samuel Tardieu  <tardieu@gostai.com>
 
 	Remove Inherits/Disinherits in yaml.
